Implementing Email Sending service and pairing application with fake SMTP server (mail trap)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database=mysql
+
+#MailTrap Configuration
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=a0f70fe7c8d9bc
+spring.mail.password=f8e4327fb4c9d9
+spring.mail.protocol=smtp
