--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 HELP.md
-target/
+target/classes
+target/generated-sources
+target/generated-test-sources
+target/maven-status
+target/test-classes
+target/surefire-reports
+
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
